5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1723_2497.log
== TEST (2019-05-09 10:39:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi= int(input("Quantia inicial: "))
tempo= int(input("Tempo de investimento: "))
juros= 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = ????

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 17
    t = ????
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:52:53) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi= float(input("Quantia inicial: "))
tempo= int(input("Tempo de investimento: "))
juros= 4.0
saldo= qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t= 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * 0.04
	saldo = saldo + rend
	t =t+1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:54:40) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi= float(input("Quantia inicial: "))
tempo= int(input("Tempo de investimento: "))
juros= 4.0
saldo= qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t= 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * 0.04
	saldo = saldo + rend
	t =t+1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:55:28) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi= float(input("Quantia inicial: "))
tempo= int(input("Tempo de investimento: "))
juros= 4.0
saldo= qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t= 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * 0.04
	saldo = saldo + rend
	t =t+1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:57:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi= float(input("Quantia inicial: "))
tempo= int(input("Tempo de investimento: "))
juros= 4.0
saldo= qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t= 0

# Atualizacao de saldo
while (t<tempo):
	rend = saldo * 0.04
	saldo = saldo + rend
	t =t+1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:57:59) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi= float(input("Quantia inicial: "))
tempo= int(input("Tempo de investimento: "))
juros= 4.0
saldo= qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t= 0

# Atualizacao de saldo
while (t<tempo):
	rend = saldo * 0.04
	saldo = saldo + rend
	t =t+1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.427932
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:37:21) 
-- CODE:
v=float(input("valor investido: "))
t=int(input("quantidade de meses: "))
i= 4/100
m=0
s=0
while(t>m):
	s=s+(s*i)
	m=m+1
print(round(soma,2)

	

-- ERROR:
File "XXXX", line 12
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:37:56) 
-- CODE:
v=float(input("valor investido: "))
t=int(input("quantidade de meses: "))
i= 4/100
m=0
s=0
while(t>m):
	s=s+(s*i)
	m=m+1
print(round(soma,2))

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(soma,2))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:38:23) 
-- CODE:
v=float(input("valor investido: "))
t=int(input("quantidade de meses: "))
i= 4/100
m=0
s=0
while(t>m):
	s=s+(s*i)
	m=m+1
print(round(s,2))

	

-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:38:55) 
-- CODE:
v=float(input("valor investido: "))
t=int(input("quantidade de meses: "))
i= 4/100
m=0
s=0
while(t>m):
	s=s+(v*i)
	m=m+1
print(round(s,2))

	

-- OUTPUT:
138.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:40:11) 
-- CODE:
v=float(input("valor investido: "))
t=int(input("quantidade de meses: "))
i= 4/100
m=0
s=v
while(t>m):
	s=s+(v*i)
	m=m+1
print(round(s,2))

	

-- OUTPUT:
713.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:49:15) 
-- CODE:
v=float(input("valor investido: "))
tempo=int(input("quantidade de meses: "))
saldo=v
t=0
i=4/100

while(t<tempo)
	saldo=saldo+(saldo*i)
	t=t+1
	
print(round(saldo,2))

	

-- ERROR:
File "XXXX", line 7
    while(t<tempo)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:50:07) 
-- CODE:
v=float(input("valor investido: "))
tempo=int(input("quantidade de meses: "))
saldo=v
t=0
i=0.04

while(t<tempo)
	saldo=saldo+(saldo*i)
	t=t+1
	
print(round(saldo,2))

	

-- ERROR:
File "XXXX", line 7
    while(t<tempo)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:50:22) 
-- CODE:
v=float(input("valor investido: "))
tempo=int(input("quantidade de meses: "))
saldo=v
t=0
i=0.04

while(t<tempo):
	saldo=saldo+(saldo*i)
	t=t+1
	
print(round(saldo,2))

	

-- OUTPUT:
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:57:40) 
-- CODE:
v=float(input("valor inicialmente investido: "))
meses=(int(input("meses de aplicacoes: "))
s=v
t=0
i=0.04
while(t<meses):
	s=s+(s*i)
	t=t+1
print(round(s,2))

	

-- ERROR:
File "XXXX", line 3
    s=v
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:59:41) 
-- CODE:
v=float(input("valor inicialmente investido: "))
meses=(int(input("meses de aplicacoes: "))
soma=v
t=0
i=0.04
while(t<meses):
	soma=soma+(soma*i)
	t=t+1
print(round(soma,2))

	

-- ERROR:
File "XXXX", line 3
    soma=v
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:00:25) 
-- CODE:
qi=float(input("valor inicialmente investido: "))
meses=(int(input("meses de aplicacoes: "))
soma=qi
t=0
i=0.04
while(t<meses):
	soma=soma+(soma*i)
	t=t+1
print(round(soma,2))

	

-- ERROR:
File "XXXX", line 3
    soma=qi
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:00:41) 
-- CODE:
qi=float(input("valor inicialmente investido: "))
meses=(int(input("meses de aplicacoes: "))
soma= qi
t= 0
i=0.04
while(t<meses):
	soma=soma+(soma*i)
	t=t+1
print(round(soma,2))

	

-- ERROR:
File "XXXX", line 3
    soma= qi
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:02:18) 
-- CODE:
qi=float(input("valor inicialmente investido: "))
meses=(int(input("meses de aplicacoes: "))
saldo= qi
t=0
i=0.04
		 
while(t<meses):
	saldo=saldo+(saldo*i)
	t=t+1
print(round(saldo,2))

	

-- ERROR:
File "XXXX", line 3
    saldo= qi
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:14:52) 
-- CODE:
qi=float(input("valor inicialmente investido: "))
meses=(int(input("meses de aplicacoes: "))
saldo= qi
t=0
i=0.04
		 
while(t<meses):
	saldo=saldo+(saldo*i)
	t=t+1
print(round(saldo,2))

	

-- ERROR:
File "XXXX", line 3
    saldo= qi
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
